--- a/Project/CSS/basic_style.css
+++ b/Project/CSS/basic_style.css
@@ -62,7 +62,7 @@ transition: transform .5s ease-in-out;
     animation-timing-function: cubic-bezier(2.5,.2,.3,2);
 }
 .squares:nth-child(1):hover {
-    background #13b4ff;
+    background: #13b4ff;
 }
 .squares:nth-child(2):hover {
     background: #d861af;
