Assignment 7 and Fixes

--- a/Project/CSS/animations.css
+++ b/Project/CSS/animations.css
@@ -88,11 +88,11 @@
     cursor: pointer;
 }
 
-photo-overlay:hover {
+.photo-overlay:hover {
     opacity: 1;
 }
 
-photo img {
+.photo img {
     transition: transform .5s;
     transform-origin: 50% 50%;
 }
