--- a/Project/CSS/shared.css
+++ b/Project/CSS/shared.css
@@ -282,6 +282,7 @@ box-shadow: 2px 2px 10px 0 rgba(0,0,0,0.5)
      position: relative;
      display: inline;
      float: right;
+     margin-top: 13%;
  }
 
  .terms:hover {
